# umba_mm_mod_umba

./: .gitignore  CMakeCCompilerId.c  CMakeCXXCompilerId.cpp  CMakeLists.txt  LICENSE  README.md  _brief.html  _brief.txt  _check_tabs.bat  _fix_tabs.bat  _make_brief.bat  _readme.txt  _sort_headers.bat  algoritms.h  alloca.h  app_helpers.h  app_main.h  arithmetic_strong_typedef.h  assert.h  attribute_weak.h  autolock.h  basic_enums.h  basic_interfaces.h  basic_interfaces_impl.h  bits.h  bits_fmt.h  c_char_class.h  c_char_class_table.h.inc  c_tokeniser.h  c_tokenizer.h  c_tokenizer_constants.h  char_class.h  char_class_table.h.inc  char_writers.h  cli_tool_helpers.h  clipboard_win32.h  cmd_line.h  compiler_id_cpp.h  compiler_info.cpp  compiler_info.h  (+109 more)
.msvc/: headers.props  readme.txt  sources.props
internal/: .gitignore  env.h  filesys.h  filesys_impl_helpers.h  winerror_prepared.h  winstrerrorname.bat  winstrerrorname.cxx  winstrerrorname.h
msvc/: _umba.vcxproj  readme.txt  sources.props  umba.sources.props
tokenizer/: defs.h  string_literal_parsing.h  todo.md_  token_filter.h  token_filters.h  tokenizer.h  tokenizer_base.h  tokenizer_builder.h  tokenizer_function_handlers.h  tokenizer_options.h  tpl.h  trie_builder.h  utils.h
tokenizer/lang/: cpp.h  plantuml.h
types/: FullQualifiedName.h
warnings/: disable_C4061.h  disable_C4062.h  disable_C4127.h  disable_C4189.h  disable_C4191.h  disable_C4244.h  disable_C4265.h  disable_C4267.h  disable_C4355.h  disable_C4365.h  disable_C4464.h  disable_C4555.h  disable_C4623.h  disable_C4820.h  disable_C4840.h  disable_C4868.h  disable_C4996.h  disable_C5045.h  disable_C5204.h  disable_C5219.h  disable_C5267.h  disable_common.h  disable_condition_is_const.h  disable_def_ctor_implicitly_deleted.h  disable_enumerator_not_handled.h  disable_fn_or_var_unsafe.h  disable_implicit_copy_ctor_deprecated.h  disable_non_portable_variadic.h  disable_non_trivial_destructor_not_virtual.h  disable_padding_added.h  disable_rel_inc_contains_dbldot.h  disable_result_not_used.h  disable_signed_unsigned_mismatch.h  disable_spectre_mitigation.h  disable_this_used_in_base_member_initializer_list.h  disable_trivial_destructor_not_virtual.h  disable_unsafe_conversion.h  interface_begin.h  interface_end.h  pop.h  (+38 more)
